@@ -1,3 +1,8 @@
+* Fri Aug 09 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.0-0
+- Remove Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.1
 - Update the upper bound of stdlib to < 6.0.0
 - Update a URL in the README.md
